--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@
             <div class="spaces4">
             <a href="index5.html"> <p><strong>Mental Health</strong></p></a>
             </div>
-          
+        
+           <div class="spaces5">
+           <a href="index6.html"><p><strong>Business</strong></p></a>
+           </div>
+
+           <div class="spaces6">
+            <a href="index7.html"><p><strong>Test Prototype</strong></p></a>
+            </div>
+            <div class="spaces7">
+                <img src="Images/The well being app logosy--20.png" width="4%"> 
+            </div>
         </div>
    </div>
 <div class="imageborder">
@@ -38,6 +48,7 @@
 <p>TWBA (The Well-Being App) is a health hub that ensures your welfare comes first. Our app provides many services like Private online healthcare, resources that aid you to keep up your fitness plus mental health and abuse information and support all in one place.
     We aim to put you and your health first by giving you a platform that includes all the resources needed for a happy and healthy life. 
     </p>
+    <a href="https://www.instagram.com/the_wellbeing_app/?hl=en"> <p class="text2">>Click here to visit our Instagram<</p></a>
 <br>
 <h2><u>What we offer:</u></h2>
 <br>
@@ -78,6 +89,7 @@
     <li>Whereas large scale businesses that have apps such as Vitality (which has a hard to use app and navigation of its features are hard to operate) and the NHS (which is also hard to operate and contains lots of unnecessary information displayed to the users) don't offer rewarding features or have such an advanced fitness trackers as ours.
     </li>
 </ul>
+<div class="imageborder2">
 <h4><u>What we want for the futre:</u></h4>
 <ul>
     <li>For the future we want our health app be known worldwide and we want to help as many people as possible, our main goal is to help as many people as possible who are experiencing early signs of a life-threatening condition and have medical specialists spot this condition before it is too late. 
@@ -88,7 +100,7 @@
 
     </li>
 </ul>
-
+</div>
 
 </body>
 </html>
