--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <div class="flexcontainer">
         <div class="imageborder"> 
               <div class="spaces": class="text"> 
-               <a href="index2.html"> <p><strong>Fitness</strong></p></a>
+               <a href="index.html"> <p><strong>Home</strong></p></a>
               </div>
         
               <div class="spaces2">
@@ -24,6 +24,18 @@
               <div class="spaces4">
                <a href="index5.html"> <p><strong>Mental Health</strong></p></a>
               </div> 
+
+              <div class="spaces5">
+                <a href="index6.html"><p><strong>Business</strong></p></a>
+                </div>
+
+                <div class="spaces6">
+                    <a href="index7.html"><p><strong>Test Prototype</strong></p></a>
+                    </div>
+                    
+                    <div class="spaces7">
+                        <img src="Images/The well being app logosy--20.png" width="4%"> 
+                    </div>
        </div>
    </div>
 
@@ -34,22 +46,31 @@
     <h1><u>Features of the app:</u></h1>
     <br>
     <h2><u>Fitness</u></h2>
-    <p>- The well-being app offers fitness resources from personal trainers near you. Users have the option to book sessions with the personal trainers via their linked contact details. There will be an extensive range of fitness videos available. 
-    </p>
-    <P>- Personal trainers will upload fitness videos for free to promote their own service on our app. Premium videos will be available for people who have a silver or basic plan.
-    </P>
-    <P>- Users will get optional notifications to be motivated to complete ten thousand steps a day. We have the option to connect to fitness tracker apps like Fitbit and Garmin to accurately track the user's steps. 
-    </P>
-    <p>- As an incentive to keep moving and active we have welfare points. The points will be awarded to users that complete daily step goals. 
-    </p>
+    <ul class="box">
+    <li>The well-being app offers fitness resources from personal trainers near you. Users have the option to book sessions with the personal trainers via their linked contact details. There will be an extensive range of fitness videos available. 
+    </li>
+    <br>
+    <li>Personal trainers will upload fitness videos for free to promote their own service on our app. Premium videos will be available for people who have a silver or basic plan.
+    </li>
+    <br>
+    <li>Users will get optional notifications to be motivated to complete ten thousand steps a day. We have the option to connect to fitness tracker apps like Fitbit and Garmin to accurately track the user's steps. 
+    </li>
+    <br>
+    <li>As an incentive to keep moving and active we have welfare points. The points will be awarded to users that complete daily step goals. 
+    </li>
+   </ul>
+    <br>
     <div class="row">
         <img src="Images/Picture2.png" alt="fitness page" width="20%" >
         <div class="column">
         <h3><u>Welfare Points</u></h3>
-        <p>We reward our app users with welfare points after they do some exercise using our app's or when they complete a daily steps goals, reward totals depend on exercise/steps done and the exercise goals achieved throughout the week/month.
-        </p>
-        <p>Welfare points can be used to purchase items from local shops and meals at local restaurants, this allows for our app to be promoted not only as a healthcare hub but also as a company that promotes smaller local businesses and companies. 
-        </p>
+        <ul class="box">
+        <li>We reward our app users with welfare points after they do some exercise using our app's or when they complete a daily steps goals, reward totals depend on exercise/steps done and the exercise goals achieved throughout the week/month.
+        </li>
+        <br>
+        <li>Welfare points can be used to purchase items from local shops and meals at local restaurants, this allows for our app to be promoted not only as a healthcare hub but also as a company that promotes smaller local businesses and companies. 
+        </li>
+        </ul>
         </div>
     </div>
 </body>
