--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,7 @@
               </div>
         
               <div class="spaces2">
-               <a href="index3.html"> <p><strong>Patient Connect</strong></p></a>
+               <a href="index.html"> <p><strong>Home</strong></p></a>
               </div>
          
               <div class="spaces3">
@@ -24,6 +24,18 @@
               <div class="spaces4">
                <a href="index5.html"> <p><strong>Mental Health</strong></p></a>
               </div> 
+
+              <div class="spaces5">
+                <a href="index6.html"><p><strong>Business</strong></p></a>
+                </div>
+
+                <div class="spaces6">
+                    <a href="index7.html"><p><strong>Test Prototype</strong></p></a>
+                    </div>
+
+                    <div class="spaces7">
+                        <img src="Images/The well being app logosy--20.png" width="4%"> 
+                    </div>
        </div>
    </div>
 
@@ -35,12 +47,16 @@
     <div class="column">
     <h2><u>Patient Connect</u></h2>
     <br>
-    <p>- Patient connect is a section on the app where people can manage their prescriptions and the doctors notes from live chats.
-    </p>
-    <p>- We offer the option to enable notifications to remind the user to use their prescription before expiry date and reminders to take medication. 
-    </p>
-    <p>- The option of the live chat function allows for faster support to patients which doesn’t have to be face to face, it's non-intrusive which allows for a direct doctor to patient connection and advanced insight into app analytics such as peak app usage hours, chat duration and the patient to doctor relationship.
-    </p>
+    <ul class="box">
+    <li>Patient connect is a section on the app where people can manage their prescriptions and the doctors notes from live chats.
+    </li>
+    <br>
+    <li>We offer the option to enable notifications to remind the user to use their prescription before expiry date and reminders to take medication. 
+    </li>
+    <br>
+    <li>The option of the live chat function allows for faster support to patients which doesn’t have to be face to face, it's non-intrusive which allows for a direct doctor to patient connection and advanced insight into app analytics such as peak app usage hours, chat duration and the patient to doctor relationship.
+    </li>
+    </ul>
     </div>
     <img src="Images/Picture3.png" alt="Patient connect page" width="20%" >
 </div>
