--- a/index5.html
+++ b/index5.html
@@ -22,8 +22,20 @@
               </div>
          
               <div class="spaces4">
-               <a href="index5.html"> <p><strong>Mental Health</strong></p></a>
+               <a href="index.html"> <p><strong>Home</strong></p></a>
               </div> 
+
+              <div class="spaces5">
+                <a href="index6.html"><p><strong>Business</strong></p></a>
+                </div>
+
+                <div class="spaces6">
+                    <a href="index7.html"><p><strong>Test Prototype</strong></p></a>
+                    </div>
+
+                    <div class="spaces7">
+                        <img src="Images/The well being app logosy--20.png" width="4%"> 
+                    </div>
        </div>
    </div>
 
@@ -35,14 +47,16 @@
     <div class="row">
         <div class="column">
           <h2><u>Mental Health</u></h2>
-    <ul>
+    <ul class="box">
         <li>Our app offers mental health resources and lists for local private counselling services. 
-        </li>
+            </li>
+        <br>
         <li>The app has lots of information for awareness about mental health conditions and there is also advice for inner well-being. 
         </li>
-        <li>There is also information on types of abuse, with this we provide website links to websites where users can receive support and help for their abusive experience. 
-
+        <br>
+        <li>There is also information on types of abuse, with this we provide website links to websites where users can receive support and help for their abusive experience.
         </li>
+        <br>
         <li>Our app also gives our users information about 'The pillars of human health', this consists of emotional health, environmental health, physical health, social health, mental health, spiritual health and abuse awareness. 
         </li>
     </ul>
