--- a/index7.html
+++ b/index7.html
@@ -11,7 +11,7 @@
     <div class="flexcontainer">
         <div class="imageborder"> 
               <div class="spaces": class="text"> 
-               <a href="index.html"> <p><strong>Fitness</strong></p></a>
+               <a href="index2.html"> <p><strong>Fitness</strong></p></a>
               </div>
         
               <div class="spaces2">
