--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
    </div>
 <div class="imageborder">
-  <img src="Images/The well being app logosy--18.png" alt="logo" width="80%" >
+  <img src="Images/The well being app logosy--18.png" alt="logo" width="100%" >
   </div>
   </a> 
   <h2><u>Who are we?</u></h2>
@@ -74,9 +74,8 @@
  <p><strong>- Mental Health</strong></p>
 </div>
  </div>
- </video>
  <div class="flexitem">
-  <img src="Images/Picture1.png" alt="menu page" width="50%" >
+  <img src="Images/Picture1.png" alt="menu page" width="200px%" >
  </div>
  <video src="Images/TWBA_vid_long.mp4" width="50%" controls="true"></video>
 </div>
