--- a/index2.html
+++ b/index2.html
@@ -61,9 +61,15 @@
    </ul>
     <br>
     <div class="row">
-        <img src="Images/Picture2.png" alt="fitness page" width="20%" >
+        <div class="flexitem">
+          
+        <img  src="Images/Picture2.png" alt="fitness page" width="250px" >
+      
+    </div>
         <div class="column">
-        <h3><u>Welfare Points</u></h3>
+            <div class="box2">
+            <h3><u>Welfare Points</u></h3>
+            </div>
         <ul class="box">
         <li>We reward our app users with welfare points after they do some exercise using our app's or when they complete a daily steps goals, reward totals depend on exercise/steps done and the exercise goals achieved throughout the week/month.
         </li>
