--- a/index3.html
+++ b/index3.html
@@ -40,14 +40,14 @@
    </div>
 
    <div class="imageborder">
-    <a href="index.html"> <img src="Images/The well being app logosy--16.png" alt="Logo" width="50%" > </a>
+    <a href="index.html"> <img src="Images/The well being app logosy--16.png" alt="Logo" width="50%"> </a>
     </div>
     <h1><u>Features of the app:</u></h1>
   <div class="row">
     <div class="column">
     <h2><u>Patient Connect</u></h2>
     <br>
-    <ul class="box">
+    <ul class="box3">
     <li>Patient connect is a section on the app where people can manage their prescriptions and the doctors notes from live chats.
     </li>
     <br>
@@ -58,7 +58,11 @@
     </li>
     </ul>
     </div>
-    <img src="Images/Picture3.png" alt="Patient connect page" width="20%" >
+  <div class="flexitem">
+    <div class="box">
+    <img src="Images/Picture3.png" alt="Patient connect page" width="300px">
+    </div>
+  </div>
 </div>
 </body>
 </html>
