--- a/index4.html
+++ b/index4.html
@@ -48,7 +48,7 @@
        <div class="column">
     <h2><u>Live Chat</u></h2>
     <br>
-    <ul class="box">
+    <ul class="bo">
     <li>Our app will offer a free service where people can have quick access to doctors that we hire.
     </li>
 <br>
@@ -59,7 +59,11 @@
  </li>
     </ul>
 </div>
-    <img src="Images/Picture4.png" alt="Live chat screen" width="20%" >
+<div class="flexitem">
+    <div class="box">
+        <img src="Images/Picture4.png" alt="Live chat screen" width="300px" >
 </div>
+</div>
+    </div>
 </body>
 </html>
