--- a/index5.html
+++ b/index5.html
@@ -61,7 +61,11 @@
         </li>
     </ul>
     </div>
-    <img src="Images/TWBA page-11.png" alt="Mental health page" width="20%" >
+    <div class="flexitem">
+    <div class="box">
+    <img src="Images/TWBA page-11.png" alt="Mental health page" width="300px" >
+    </div>
+</div>
 </div>
 </body>
 </html>
