--- a/index6.html
+++ b/index6.html
@@ -57,9 +57,13 @@
           </li> 
          </ul>
         </div>
+    <div class="flexitem">
+        <div class="box">
+        <img src="Images/TWBA-10.png" alt="payment plans" width="300px">
+      </div>
+    </div>
 
-    <img src="Images/TWBA-10.png" alt="payment plans" width="20%">
-</div>
+    </div>
 
 <h2><u>Costs</u></h2>
 <img src="Images/Picture1hi.png" alt="cost tables" width="100%">
@@ -82,7 +86,11 @@
        </li>
        </ul>
     </div>
-    <img src="Images/Picture1marketing.png" alt="marketing" width="25%">
+    <div class="flexitem">
+        <div class="box">
+    <img src="Images/Picture1marketing.png" alt="marketing" width="400px">
+    </div>
+    </div>
 </div>
 <br>
 <br>
@@ -103,7 +111,11 @@
             </li>
         </ul>
     </div>
-    <img src="Images/Picture1feedback.png" alt="market feedback" width="25%">
+    <div class="flexitem">
+        <div class="box">
+    <img src="Images/Picture1feedback.png" alt="market feedback" width="250">
+     </div>
+    </div>
 </div>
 
 </body>
