--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
 <br>
 <h3><u>Why our app is better...</u></h3>
 <ul>
-    <li>Our app is better than our competitors because we combine all your needs onto one health hub. We offer our users the chance to earn rewards from exercising and by completing daily fitness goals such as daily step goals or exercising along to our fitness videos. The rewards you earn from the user's exercise can be put towards the purchase of gift cards. 
+    <li>Our app is better than our competitors because we combine all your needs into one health hub. We offer our users the chance to earn rewards from exercising and by completing daily fitness goals such as daily step goals or exercising along to our fitness videos. The rewards you earn from the user's exercise can be put towards the purchase of gift cards. 
     </li>
     <br>
-    <li>Whereas large scale businesses that have apps such as Vitality (which has a hard to use app and navigation of its features are hard to operate) and the NHS (which is also hard to operate and contains lots of unnecessary information displayed to the users) don't offer rewarding features or have such an advanced fitness trackers as ours.
+    <li>Whereas large-scale businesses that have apps such as Vitality (which has a hard to use app and navigation of its features are hard to operate) and the NHS (which is also hard to operate and contains lots of unnecessary information displayed to the users) don't offer rewarding features or have such an advanced fitness trackers as ours.
     </li>
 </ul>
 <div class="imageborder2">
-<h4><u>What we want for the futre:</u></h4>
+<h4><u>What we want for the future:</u></h4>
 <ul>
-    <li>For the future we want our health app be known worldwide and we want to help as many people as possible, our main goal is to help as many people as possible who are experiencing early signs of a life-threatening condition and have medical specialists spot this condition before it is too late. 
+    <li>For the future we want our health app to be known worldwide and we want to help as many people as possible, our main goal is to help as many people as possible who are experiencing early signs of a life-threatening condition and have medical specialists spot this condition before it is too late. 
 
     </li>
     <br>
